fix z-index on fullScreenEnterBtn to allow pointer events

--- a/src/components/posts/post/postMenu/postMenuStyles.css
+++ b/src/components/posts/post/postMenu/postMenuStyles.css
@@ -7,7 +7,7 @@
   padding-top: 0.5rem;
   padding-left: 1rem;
   padding-bottom: 1rem;
-  z-index: 0;
+  z-index: 1;
 }
 
 
